--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -2,4 +2,5 @@
   <h1>BSides Winnipeg 2017</h1>
   <p class="lead">November 4th &amp; 5th, 2017</p>
   <p class="lead">The King's Head Pub, Winnipeg, Canada</p>
+  <p><a class="btn btn-lg btn-info" href="/BSides_Winnipeg_2017_Call_For_Papers.pdf" role="button">CFP is Open</a></p>
 </div>
