Add link tag, so link to the site on FB show reasonable preview

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="google-site-verification" content="qxU-HDggfR-rQ0BEHZpg053CxRSQS0bKVG4cvd3XJQk" />
+  <link rel="image_src" href="/social_preview.jpg" />
 
   <title>BSides Winnipeg</title>
   <meta name="description" content="Winnipeg's Technical Information Security Conference">
