--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,9 @@
   <meta name="viewport" content="width=device-width initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="google-site-verification" content="qxU-HDggfR-rQ0BEHZpg053CxRSQS0bKVG4cvd3XJQk" />
+
   <link rel="image_src" href="/social_preview.jpg" />
+  <meta property="og:image" content="/social_preview.jpg" />
 
   <title>BSides Winnipeg</title>
   <meta name="description" content="Winnipeg's Technical Information Security Conference">
