--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <meta name="google-site-verification" content="qxU-HDggfR-rQ0BEHZpg053CxRSQS0bKVG4cvd3XJQk" />
 
   <link rel="image_src" href="/social_preview.jpg" />
-  <meta property="og:image" content="/social_preview.jpg" />
+  <meta property="og:image" content="http://bsideswpg.ca/social_preview.jpg" />
 
   <title>BSides Winnipeg</title>
   <meta name="description" content="Winnipeg's Technical Information Security Conference">
