Add ticket button.

--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -2,5 +2,5 @@
   <h1>BSides Winnipeg 2017</h1>
   <p class="lead">November 4th &amp; 5th, 2017</p>
   <p class="lead">The King's Head Pub, Winnipeg, Canada</p>
-  <p><a class="btn btn-lg btn-info" href="/BSides_Winnipeg_2017_Call_For_Papers.pdf" role="button">CFP is Open</a></p>
+  <p><a class="btn btn-lg btn-warning" href="https://www.eventbrite.ca/e/bsides-winnipeg-2017-tickets-38434570836" role="button">Tickets Available Oct 2 at 9:00 AM</a></p>
 </div>
