--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -2,5 +2,5 @@
   <h1>BSides Winnipeg 2017</h1>
   <p class="lead">November 4th &amp; 5th, 2017</p>
   <p class="lead">The King's Head Pub, Winnipeg, Canada</p>
-  <p><a class="btn btn-lg btn-success" href="https://www.eventbrite.ca/e/bsides-winnipeg-2017-tickets-38434570836" role="button">Tickets On Sale Now</a></p>
+  <p><a class="btn btn-lg btn-danger" href="https://www.eventbrite.ca/e/bsides-winnipeg-2017-tickets-38434570836" role="button">Tickets Sold Out</a></p>
 </div>
