Giant Post-Con Update

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,12 +15,15 @@
         <ul class="nav navbar-nav">
           <li {% if page.path == 'index.md' %} class="active" {% endif %}><a href="/">Home</a></li>
           <li {% if page.path == 'about.md' %} class="active" {% endif %}><a href="/about/">About</a></li>
-          <li {% if page.path == '2017-speakers.md' %} class="active" {% endif %}><a href="/speakers/">Schedule &amp; Speakers</a></li>
-          <li {% if page.path == '2017-sponsors.md' %} class="active" {% endif %}><a href="/sponsors/">Sponsors</a></li>
+          <li {% if page.path == '2018-speakers.md' %} class="active" {% endif %}><a href="/speakers/">Schedule &amp; Speakers</a></li>
+          <li {% if page.path == '2018-sponsors.md' %} class="active" {% endif %}><a href="/sponsors/">Sponsors</a></li>
           <li {% if page.path == 'contact.md' %} class="active" {% endif %}><a href="/contact/">Contact</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Archive <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
+              <li class="dropdown-header">2017</li>
+              <li><a href="/2017/speakers/">Schedule &amp; Speakers</a></li>
+              <li><a href="/2017/sponsors/">Sponsors</a></li>
               <li class="dropdown-header">2015</li>
               <li><a href="/2015/speakers/">Schedule &amp; Speakers</a></li>
               <li><a href="/2015/sponsors/">Sponsors</a></li>
