--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
-  <h1>BSides Winnipeg 2017</h1>
-  <p class="lead">November 4th &amp; 5th, 2017</p>
+  <h1>BSides Winnipeg 2018</h1>
+  <p class="lead">November 2018</p>
   <p class="lead">The King's Head Pub, Winnipeg, Canada</p>
-  <p><a class="btn btn-lg btn-danger" href="https://www.eventbrite.ca/e/bsides-winnipeg-2017-tickets-38434570836" role="button">Tickets Sold Out</a></p>
+  <p><a class="btn btn-lg btn-success" href="https://join.slack.com/t/dc204/shared_invite/enQtMjY2NDMwNTE4MDMzLWRhMjM1ZjdmYTk4MzA0ZGZjOWQ3ZDEyYjYxYzc0YmZlNzgxMTQ2NzNmODdlNTVkNmRhOGExM2I5YzVmMWQwMTc" role="button">Join Our Slack Team</a></p>
 </div>
