Use custom YT URL.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
       <i class="fa fa-twitter fa-lg"></i>
     </a>
 
-    <a class="btn btn-default btn-xs" href="https://www.youtube.com/channel/UCNQOGXlvuAhv4b1MRrv4TGQ">
+    <a class="btn btn-default btn-xs" href="https://www.youtube.com/c/BSidesWinnipeg">
       <i class="fa fa-youtube fa-lg"></i>
     </a>
 
